--- a/Travel.html
+++ b/Travel.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html> 
 
     <head>
@@ -20,9 +21,82 @@
             <button class="book-ticket">Book Ticket</button>
         </header>
 
-        <img src="Group 7.png">
         <h3>Best destination around the world</h3>
+
+        <img src="Group 7.png" alt="Travel Image">
         <h1>Travel to the <br>any corner <br>of the world.</h1>
+        <h2>We can build the Holidays of your dreams and make them <br>unforgettable.</h2>
+
+        <div class="search-bar">
+            <input type="text" placeholder="Destination" value="Colombo">
+            <input type="date">
+            <input type="number" placeholder="How many people">
+            <button>Search</button>
+        </div>
+
+        <div class="top-destinations">
+            <h2>Explore Top Destinations</h2>
+        </div>
+
+        <div class="cards-container">
+            <div class="card">
+                <img src="images/Group 7.png" alt="Cancun, Mexico">
+                <div class="card-content">
+                    <h3>Cancun, Mexico</h3>
+                    <p>Rs.20000</p>
+                    <div class="stars">
+                        <span class="filled">&#9733;</span>
+                        <span class="filled">&#9733;</span>
+                        <span class="filled">&#9733;</span>
+                        <span class="filled">&#9733;</span>
+                        <span>&#9733;</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="images/ai-generated-8131428_640 1.png" alt="Siem Reap, Canada">
+                <div class="card-content">
+                    <h3>Siem Reap, Canada</h3>
+                    <p>Rs.25000</p>
+                    <div class="stars">
+                        <span class="filled">&#9733;</span>
+                        <span class="filled">&#9733;</span>
+                        <span class="filled">&#9733;</span>
+                        <span>&#9733;</span>
+                        <span>&#9733;</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="https://via.placeholder.com/250x150" alt="Cancun, Mexico">
+                <div class="card-content">
+                    <h3>Cancun, Mexico</h3>
+                    <p>Rs.30000</p>
+                    <div class="stars">
+                        <span class="filled">&#9733;</span>
+                        <span class="filled">&#9733;</span>
+                        <span class="filled">&#9733;</span>
+                        <span class="filled">&#9733;</span>
+                        <span>&#9733;</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="middle">
+            <h2>How we work</h2>
+        </div>
+
+        <section id="services">
+            <p>We offer Best Services</p>
+
+                <div class="location">
+                    <p>Location</p>
+                    <h2>Experience the stunning sunsets over the Aegean Sea. Santorini’s whitewashed buildings and crystal-clear waters make it a top romantic destination.</h2>
+                </div>
+        </section>
 
     </body>
 
